navbar overflow fixed

--- a/assets/css/colum.css
+++ b/assets/css/colum.css
@@ -1,240 +1,3 @@
-/* xs */
-@media screen and (max-width: 575.98px) {
-    /* .container {
-        width: 94%;
-    } */
-
-    .colum-xs-1 {
-        width: 6.66666667%;
-        flex: 0 0 6.66666667%;
-    }
-
-    .colum-xs-2 {
-        width: calc(6.66666667*2%);
-        flex: 0 0 calc(6.66666667*2%);
-    }
-
-    .colum-xs-3 {
-        width: calc(6.66666667*3%);
-        flex: 0 0 calc(6.66666667*3%);
-    }
-
-    .colum-xs-4 {
-        width: calc(6.66666667*4%);
-        flex: 0 0 calc(6.66666667*4%);
-    }
-
-    .colum-xs-5 {
-        width: calc(6.66666667*5%);
-        flex: 0 0 calc(6.66666667*5%);
-    }
-
-    .colum-xs-6 {
-        width: calc(6.66666667*6%);
-        flex: 0 0 calc(6.66666667*6%);
-    }
-
-    .colum-xs-7 {
-        width: calc(6.66666667*7%);
-        flex: 0 0 calc(6.66666667*7%);
-    }
-
-    .colum-xs-8 {
-        width: calc(6.66666667*8%);
-        flex: 0 0 calc(6.66666667*8%);
-    }
-
-    .colum-xs-9 {
-        width: calc(6.66666667*9%);
-        flex: 0 0 calc(6.66666667*9%);
-    }
-
-    .colum-xs-10 {
-        width: calc(6.66666667*10%);
-        flex: 0 0 calc(6.66666667*10%);
-    }
-
-    .colum-xs-11 {
-        width: calc(6.66666667*11%);
-        flex: 0 0 calc(6.66666667*11%);
-    }
-
-    .colum-xs-12 {
-        width: 100%;
-        flex: 0 0 100%;
-    }
-    .colum-xs-13 {
-        width: calc(6.66666667*12%);
-        flex: 0 0 calc(6.66666667*12%);
-    }
-    .colum-xs-13 {
-        width: calc(6.66666667*13%);
-        flex: 0 0 calc(6.66666667*13%);
-    }
-    .colum-xs-14 {
-        width: calc(6.66666667*14%);
-        flex: 0 0 calc(6.66666667*14%);
-    }
-    .colum-xs-15 {
-        width: calc(6.66666667*15%);
-        flex: 0 0 calc(6.66666667*15%);
-    }
-}
-
-/* sm */
-@media (min-width: 576px) and (max-width: 767.98px) {
-    
-
-    .colum-sm-1 {
-        width: 6.66666667%;
-        flex: 0 0 6.66666667%;
-    }
-
-    .colum-sm-2 {
-        width: calc(6.66666667*2%);
-        flex: 0 0 calc(6.66666667*2%);
-    }
-
-    .colum-sm-3 {
-        width: calc(6.66666667*3%);
-        flex: 0 0 calc(6.66666667*3%);
-    }
-
-    .colum-sm-4 {
-        width: calc(6.66666667*4%);
-        flex: 0 0 calc(6.66666667*4%);
-    }
-
-    .colum-sm-5 {
-        width: calc(6.66666667*5%);
-        flex: 0 0 calc(6.66666667*5%);
-    }
-
-    .colum-sm-6 {
-        width: calc(6.66666667*6%);
-        flex: 0 0 calc(6.66666667*6%);
-    }
-
-    .colum-sm-7 {
-        width: calc(6.66666667*7%);
-        flex: 0 0 calc(6.66666667*7%);
-    }
-
-    .colum-sm-8 {
-        width: calc(6.66666667*8%);
-        flex: 0 0 calc(6.66666667*8%);
-    }
-
-    .colum-sm-9 {
-        width: calc(6.66666667*9%);
-        flex: 0 0 calc(6.66666667*9%);
-    }
-
-    .colum-sm-10 {
-        width: calc(6.66666667*10%);
-        flex: 0 0 calc(6.66666667*10%);
-    }
-
-    .colum-sm-11 {
-        width: calc(6.66666667*11%);
-        flex: 0 0 calc(6.66666667*11%);
-    }
-
-    .colum-sm-12 {
-        width: calc(6.66666667*12%);
-        flex: 0 0 calc(6.66666667*12%);
-    }
-    .colum-sm-13 {
-        width: calc(6.66666667*13%);
-        flex: 0 0 calc(6.66666667*13%);
-    }
-    .colum-sm-14 {
-        width: calc(6.66666667*14%);
-        flex: 0 0 calc(6.66666667*14%);
-    }
-    .colum-sm-15 {
-        width: calc(6.66666667*15%);
-        flex: 0 0 calc(6.66666667*15%);
-    }
-}
-
-/* md */
-@media (min-width: 768px) and (max-width: 991.98px) {
-    
-
-
-    .colum-md-1 {
-        width: 6.66666667%;
-        flex: 0 0 6.66666667%;
-    }
-
-    .colum-md-2 {
-        width: calc(6.66666667*2%);
-        flex: 0 0 calc(6.66666667*2%);
-    }
-
-    .colum-md-3 {
-        width: calc(6.66666667*3%);
-        flex: 0 0 calc(6.66666667*3%);
-    }
-
-    .colum-md-4 {
-        width: calc(6.66666667*4%);
-        flex: 0 0 calc(6.66666667*4%);
-    }
-
-    .colum-md-5 {
-        width: calc(6.66666667*5%);
-        flex: 0 0 calc(6.66666667*5%);
-    }
-
-    .colum-md-6 {
-        width: calc(6.66666667*6%);
-        flex: 0 0 calc(6.66666667*6%);
-    }
-
-    .colum-md-7 {
-        width: calc(6.66666667*7%);
-        flex: 0 0 calc(6.66666667*7%);
-    }
-
-    .colum-md-8 {
-        width: calc(6.66666667*8%);
-        flex: 0 0 calc(6.66666667*8%);
-    }
-
-    .colum-md-9 {
-        width: calc(6.66666667*9%);
-        flex: 0 0 calc(6.66666667*9%);
-    }
-
-    .colum-md-10 {
-        width: calc(6.66666667*10%);
-        flex: 0 0 calc(6.66666667*10%);
-    }
-
-    .colum-md-11 {
-        width: calc(6.66666667*11%);
-        flex: 0 0 calc(6.66666667*11%);
-    }
-
-    .colum-md-12 {
-        width: calc(6.66666667*12%);
-        flex: 0 0 calc(6.66666667*12%);
-    }
-    .colum-md-13 {
-        width: calc(6.66666667*13%);
-        flex: 0 0 calc(6.66666667*13%);
-    }
-    .colum-md-14 {
-        width: calc(6.66666667*14%);
-        flex: 0 0 calc(6.66666667*14%);
-    }
-    .colum-md-15 {
-        width: calc(6.66666667*15%);
-        flex: 0 0 calc(6.66666667*15%);
-    }
-}
 
 /* lg */
 @media (min-width: 992px) and (max-width: 1199.98px) {
