--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,3 +1,6 @@
+html{
+    overflow-x: hidden;
+}
 body{
     overflow-x: hidden;
     nav{
